스웨거 jwt 표시 적용
