# storage/api-docs/api-docs.json
@@ -19,6 +19,10 @@
             "description": "로컬 서버"
         },
         {
+            "url": "http://localhost:8080",
+            "description": "도커 서버"
+        },
+        {
             "url": "https://www.th-study.com",
             "description": "운영 서버"
         }
@@ -52,7 +56,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         }
     },
